--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 body {
   padding: 20px;
 }
+header {
+  display: flex;
+  justify-content: flex-end;
+}
+.header__nav li a {
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+}
+.header__nav li {
+  list-style-type: none;
+  
+}
+.header__menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background-color: gray;
+  transform: translateX(-100%);
+  transition: transform 0.5s;
+}
+.header__burger {
+  display: block;
+  position: relative;
+
+  z-index: 2;
+}
+
+.header__menu.active {
+  transform: translateX(0);
+}
